# analisis-opiniones-s24-ultra

./: .gitignore  README.md  datos_encuesta.csv  main.py  pyproject.toml  requirements.txt
docs/: entregable.docx  entregable.md
docs/tables/: classified_comments.csv  sentiment_by_aspect.csv  survey_statistics.csv  word_frequency.csv
scripts/: seed_demo_corpus.py
src/contextualization/: __init__.py  cli.py  extraction_scraping.py  sentiment_analysis.py  statistical_analysis.py  word_frequency.py
